<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shunam.justjava.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="@string/main_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/main_name"
        android:layout_marginBottom="10dp" />

    <TextView
        android:text="@string/main_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/main_address"
        android:layout_marginBottom="10dp" />

    <TextView
        android:text="@string/main_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_address"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/main_sex"
        android:paddingBottom="10dp" />

    <Button
        android:text="@string/main_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_sex"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/main_button_ok" />

    <Button
        android:text="@string/main_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/main_button_ok"
        android:layout_toRightOf="@+id/main_button_ok"
        android:layout_toEndOf="@+id/main_button_ok"
        android:id="@+id/main_button_cancel"
        android:layout_marginLeft="15dp" />

    <Button
        android:text="Intent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/main_button_cancel"
        android:layout_toRightOf="@+id/main_button_cancel"
        android:layout_toEndOf="@+id/main_button_cancel"
        android:id="@+id/main_button_intent" />
</RelativeLayout>
